--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/photo
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: secure
-    username: root
+    password:
+    username:
   jpa:
     hibernate:
       ddl-auto: update
@@ -18,9 +18,10 @@ spring:
         format_sql: true
   mail:
     host: smtp.sendgrid.net
-    port: 465
-    username: apikey
-    password: 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
+    port: 587
+    username:
+    password:
+    protocol: smtp
 logging:
   level:
     org.hibernate.SQL: debug
